<!--
  ~ MIT License (MIT)
  ~
  ~ Copyright © 2021  Hwwwww
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the “Software”), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
  ~ and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so,
  ~ subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  ~ LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  ~ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~
  -->

<resources>
    <string name="app_name">DozeConfig</string>
    <string name="splash">Welcome</string>
    <string name="doze_run_log">Module run log</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="whitelist">Whitelist</string>
    <string name="applications">Applications</string>
    <string name="applications_prompt">Choose doze whitelist</string>
    <string name="not_found_whitelist_file">Not found whitelist file</string>
    <string name="not_found_whitelist_file_prompt">Please check sdcard/Android/doze.conf is exists?</string>
    <string name="found_whitelist_file">Found whitelist file!</string>
    <string name="found_whitelist_file_prompt">Please enjoy! 🚀(Click me)</string>
    <string name="whitelist_file_error">Whitelist file is error!</string>
    <string name="log_file">Log File</string>
    <string name="not_found_log_file">Not found log file!</string>
    <string name="found_log_file">Found log file!</string>
    <string name="search">Search</string>
    <string name="search_hint">Please input package name or app name</string>
    <string name="log">Log</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="save">Save</string>
    <string name="delete_log">Delete log</string>
    <string name="github" translatable="false">GitHub:</string>
    <string name="author">Coolapk:</string>
    <string name="about_description">This application was developed for the convenience of adding a whitelist to the
        Doze module. \nWe will obtain some privacy-related permissions to ensure the normal operation of the
        application:\n👉1, storage read and write permissions (read whitelist and log files)\n👉2, read application list
        permissions (read application list )\n👉3, Root permission (optimized whitelist)\nIf you encounter any problems
        (such as bugs, program crashes, etc.) during use, you can submit an issue on GitHub or privately write to me in
        Coolapk
    </string>
    <string name="version" translatable="false">1.2.1 Release</string>
    <string name="prompt">Tips</string>
    <string name="prompt_delete_log">Are sure delete log file?</string>
    <string name="features">Features:\n1. Add Shortcut\n2. Change the icon\n3. Fix bugs
    </string>
    <string name="permission_prompt">Please give relevant permissions (read and write mobile phone storage permissions),
        otherwise you will not be able to use this application normally!
    </string>
    <string name="in_loop">I\'m still sliding, please stop and do it again!</string>
    <string name="save_success">Save successfully!</string>
    <string name="save_failed">Save failed!</string>
    <!-- Preference Titles -->
    <string name="common_header">Common setting</string>
    <string name="advanced_header">Advanced setting</string>
    <string name="lazy_load_icon">Lazy load icon</string>
    <string name="lazy_load_icon_summary">Reduce the CPU usage when sliding</string>
    <string name="run_doze_whitelist">Run doze whitelist optimization</string>
    <string name="run_doze_whitelist_summary">Tap the main interface card 5 times to optimize (Root)</string>
    <string name="auto_save">Auto save doze config</string>
    <string name="auto_save_summary">Auto save doze.conf</string>
    <string name="shortcut_opt">Optimize the whitelist</string>
    <string name="shortcut_app_list">APP List</string>
    <string name="whitelist_opt_success">Successfully!</string>
    <string name="whitelist_opt_failed">Failed!</string>
    <string name="delete_config">Delete config file</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete_success">Delete successfully!</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="delete_config_dialog">This operation will delete the Doze whitelist configuration file, which will
        directly cause the module and application to not work properly.\n\nAre you sure to delete it?
    </string>


</resources>