<!--
  ~ MIT License (MIT)
  ~
  ~ Copyright © 2021  Hwwwww
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the “Software”), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
  ~ and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so,
  ~ subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  ~ LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  ~ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~
  -->

<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
            app:title="@string/advanced_header">
        <SwitchPreferenceCompat
                app:key="auto_save"
                app:icon="@drawable/ic_save"
                app:summary="@string/auto_save_summary"
                app:title="@string/auto_save"/>
        <SwitchPreferenceCompat
                app:key="run_doze_whitelist"
                app:icon="@drawable/ic_rocket_fill"
                app:summary="@string/run_doze_whitelist_summary"
                app:title="@string/run_doze_whitelist"/>
        <SwitchPreferenceCompat
                app:key="lazy_load_icon"
                app:icon="@drawable/ic_icon"
                app:summary="@string/lazy_load_icon_summary"
                app:title="@string/lazy_load_icon"/>
    </PreferenceCategory>
</PreferenceScreen>

