<!--
  ~ Copyright (c) Hwwwww 2021 https://github.com/HwwwwwLemon/DozeConfig  All Rights Reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.github.hwwwwwlemon.dozeconfig.MainActivity">
    <item
            android:id="@+id/toolbar_show_system_apps"
            android:checkable="true"
            android:title="@string/show_system_apps"/>
    <item
            android:id="@+id/toolbar_save"
            android:title="@string/save"/>
    <item
            android:id="@+id/toolbar_search"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="always"/>
</menu>