<!--
  ~ MIT License (MIT)
  ~
  ~ Copyright © 2021  Hwwwww
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  ~ associated documentation files (the “Software”), to deal in the Software without restriction,
  ~ including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
  ~ and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so,
  ~ subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial
  ~ portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  ~ LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  ~ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  ~ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/snackbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:clipChildren="false"
            tools:ignore="MissingPrefix">

        <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    tools:context=".ui.activity.MainActivity">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="10dp"
                        android:clipChildren="false"
                        android:clipToPadding="false">

                    <ImageView
                            android:id="@+id/doze_icon"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="16dp"
                            android:contentDescription="@string/app_name"
                    />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@id/doze_icon"
                            android:contentDescription="@string/app_name"
                            android:text="@string/app_name"
                            android:textSize="20sp"
                            tools:ignore="RelativeOverlap"/>
                </RelativeLayout>

                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        app:cardPreventCornerOverlap="false">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="18dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="18dp"
                            android:paddingBottom="20dp">

                        <ImageView
                                android:id="@+id/status_icon"
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_centerVertical="true"
                                app:tint="?android:attr/textColorPrimaryInverse"
                                app:srcCompat="@drawable/ic_error"/>

                        <TextView
                                android:id="@+id/status_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:layout_toEndOf="@id/status_icon"
                                android:textColor="?android:attr/textColorPrimaryInverse"
                                android:textSize="18sp"
                        />

                        <TextView
                                android:id="@+id/status_summary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/status_title"
                                android:layout_alignStart="@id/status_title"
                                android:layout_marginTop="5dp"
                                android:textColor="?android:attr/textColorPrimaryInverse"
                        />
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/applications_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:outlineAmbientShadowColor="#3A000000"
                        android:outlineSpotShadowColor="#3A000000"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        app:cardPreventCornerOverlap="false">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="18dp"
                            android:paddingTop="16dp"
                            android:paddingEnd="18dp"
                            android:paddingBottom="16dp">

                        <ImageView
                                android:id="@+id/applications_list_icon"
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_centerVertical="true"
                                app:srcCompat="@drawable/ic_applist"/>

                        <TextView
                                android:id="@+id/modules_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:layout_toEndOf="@id/applications_list_icon"
                                android:text="@string/applications"
                                android:textSize="18sp"/>

                        <TextView
                                android:id="@+id/applications_list_summary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/modules_title"
                                android:layout_alignStart="@id/modules_title"
                                android:layout_marginTop="2dp"
                                android:textColor="@android:color/darker_gray"
                                android:text="@string/applications_prompt"/>
                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/doze_run_log"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardElevation="0dp"
                        app:cardPreventCornerOverlap="false"
                        app:cardBackgroundColor="#00000000">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginHorizontal="16dp"
                            android:orientation="horizontal"
                            android:paddingBottom="20dp"
                            android:paddingTop="20dp"
                    >

                        <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                app:srcCompat="@drawable/ic_assignment"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:text="@string/doze_run_log"
                                android:textSize="16sp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        app:cardBackgroundColor="#00000000"
                >
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginHorizontal="16dp"
                            android:orientation="horizontal"
                            android:paddingBottom="20dp"
                            android:paddingTop="20dp"
                    >

                        <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                app:srcCompat="@drawable/ic_settings"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:text="@string/settings"
                                android:textSize="16sp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        app:cardPreventCornerOverlap="false"
                        app:cardBackgroundColor="#00000000"
                >
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginHorizontal="16dp"
                            android:orientation="horizontal"
                            android:paddingBottom="20dp"
                            android:paddingTop="20dp"
                    >

                        <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                app:srcCompat="@drawable/ic_info"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:text="@string/about"
                                android:textSize="16sp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>